force-app/main/default/objects/Slack_Auth__c/Slack_Auth__c.object-meta.xml
<CustomObject>
    <label>Slack Auth</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Slack Auth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Auths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>