force-app/main/default/objects/Slack_Auth__c/fields/Is_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Is_Most_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Most Recent</label>
    <type>Checkbox</type>
</CustomField>