force-app/main/default/objects/Slack_Auth__c/fields/Object_Search_Url__c.field-meta.xml
<CustomField>
    <fullName>Object_Search_Url__c</fullName>
    <label>Object Search Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>