force-app/main/default/objects/Slack_Auth__c/fields/Object_Search_Url_Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Object_Search_Url_Expiration_Date_Time__c</fullName>
    <label>Object Search Url Expiration Date Time</label>
    <type>DateTime</type>
</CustomField>