force-app/main/default/objects/Slack_Auth__c/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <label>Slack User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>