force-app/main/default/objects/Slack_Auth__c/fields/Workspace__c.field-meta.xml
<CustomField>
    <fullName>Workspace__c</fullName>
    <label>Workspace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>